<resources>
    <string name="app_name">Smart Metrify</string>

    <string name="back">Back</string>
    <string name="verify_your">Verify Your Meter</string>
    <string name="provide_meter_verify">Please provide your meter number for verification</string>
    <string name="enter_your_meter_number">Enter Your meter number</string>
    <string name="meter_number">Meter Number</string>
    <string name="submit">Submit</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="get_started_today">Get Started Today</string>
    <string name="emailText">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_account">Already have an account?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_password">Create New Password</string>
    <string name="new_password">New Password</string>
    <string name="logo">Logo</string>
    <string name="token_amount">Token Amount</string>
    <string name="history">History</string>
    <string name="view_all">View All</string>
    <string name="no_history">No History</string>
    <string name="check_back_later">Check back later.</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="amount">Amount (₦)</string>
    <string name="text_example">1234567890123</string>
    <string name="loading_paystack">Loading PayStack</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="dateTime">2024-10-02, 12:00:00</string>
    <string name="mount">100.00</string>
    <string name="settings">Settings</string>
    <string name="previous">Previous</string>
    <string name="welcomeOne">Easily manage tariffs, transactions, and customer accounts. Secure access ensures smooth \noperations from login to completion.</string>
    <string name="welcome_two">Update and control tariffs efficiently. Ensure accurate billing and real-time adjustments, all from a user-friendly dashboar</string>
    <string name="get_started">Get Started</string>
    <string name="total_amount_spent">Total Amount Spent: </string>


    <string name="managementBaseURL">https://smartmetering.kuleanpay.com</string>
    <string name="payBaskURL">https://smartmetering.kuleanpay.com</string>
<!--        <string name="managementBaseURL">https://563d-102-89-23-154.ngrok-free.app</string>-->
<!--        <string name="payBaskURL">https://563d-102-89-23-154.ngrok-free.app </string>-->
    <string name="service_fee_history">Service Fee History</string>

</resources>