<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserDashboard"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="20dp"
        android:background="@drawable/userback">

        <ImageView
            android:id="@+id/imagelogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/userback"
            android:contentDescription="@string/logo"/>

        <TextView
            android:id="@+id/smart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SMART \nUTILITY"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_toEndOf="@id/imagelogo"
            android:layout_marginStart="5dp"
            android:layout_alignTop="@id/imagelogo"
            android:layout_alignBottom="@id/imagelogo"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/meterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Meter Number"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@id/imagelogo"
            android:layout_marginTop="16dp"/>

        <RelativeLayout
            android:id="@+id/copyRelative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/meterText"
            android:layout_marginTop="5dp"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/border_lining">
            <TextView
                android:id="@+id/meterNumberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_example"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textIsSelectable="true" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/copy_white_icon"
                android:layout_toEndOf="@id/meterNumberText"
                android:contentDescription="copy icon"
                android:layout_marginStart="3dp"/>
        </RelativeLayout>

    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/tokenCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-90dp"
        android:layout_below="@id/headerBackground"
        android:background="@color/white"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/tokenRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:background="@color/white">
        <RelativeLayout
            android:id="@+id/emailRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tokenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/token_amount"
                android:textSize="15sp"
                android:textColor="@color/edit"
                android:textStyle="bold"/>
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tokenInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailRelative"
            app:hintTextColor="@color/hintColor"
            app:errorTextColor="@color/red"
            app:errorIconTint="@color/red"
            app:errorIconDrawable="@drawable/baseline_error_outline_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tokenInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter amount"
                android:background="@drawable/gray_background"
                android:textColorHint="@color/hintColor"
                android:inputType="number"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/tokenButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tokenInputLayout"
            android:backgroundTint="@color/primary"
            android:text="Purchase"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/tokenHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_below="@id/tokenCard"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <TextView
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textSize="15sp"
            android:textColor="@color/primary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/viewHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textSize="15sp"
            android:textColor="@color/someText"
            android:textStyle="bold"
            android:layout_toStartOf="@id/viewAll"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"/>

        <ImageView
            android:id="@+id/viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_forward"
            android:contentDescription="arrowIcon"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tokenRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tokenHistory"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:id="@+id/dashHistoryLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tokenHistory"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/charging_meter"
            android:contentDescription="empty logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_history"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_back_later"
            android:textColor="@color/someText"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/userDashNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_menu"
        android:background="@color/white"
        android:elevation="2dp"
        app:itemIconTint="@drawable/item_selector"
        style="@style/Widget.MaterialComponents.BottomNavigationView"/>

</RelativeLayout>